<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.myapp.grocerli.ui.login.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivLogo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".15"
                app:layout_constraintWidth_percent=".4"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:srcCompat="@drawable/grocerli" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLogo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias=".2"
                app:layout_constraintWidth_percent=".8"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="@id/tilEmail"
                app:layout_constraintStart_toStartOf="@id/tilEmail"
                app:layout_constraintTop_toBottomOf="@id/tilEmail"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.pass}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="@{viewModel.enableLogin(viewModel.email, viewModel.pass)}"
                android:onClick="@{()->viewModel.loginUser()}"
                android:text="@string/log_in"
                app:layout_constraintEnd_toEndOf="@id/tilEmail"
                app:layout_constraintStart_toStartOf="@id/tilEmail"
                app:layout_constraintTop_toBottomOf="@id/tilPassword" />

            <Button
                android:id="@+id/btSignUp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="@id/tilEmail"
                app:layout_constraintStart_toStartOf="@id/tilEmail"
                app:layout_constraintTop_toBottomOf="@id/btLogin" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>